<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>example_client</name>
  <version>1.0.0</version>
  <description>
    Package managing the example script running on the Thymio II.
  </description>
  <maintainer email="paolo.baldini.phd@gmail.com">Paolo Baldini</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>asebaros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>